--- a/src/template.html
+++ b/src/template.html
@@ -14,6 +14,7 @@
 
     <script src="lib/codemirror.js"></script>
     <link rel="stylesheet" href="lib/codemirror.css" />
+    <link rel="stylesheet" href="theme/material-darker.css" />
     <script src="mode/javascript/javascript.js"></script>
 
     <!-- Sapper generates a <style> tag containing critical CSS
