--- a/src/template.html
+++ b/src/template.html
@@ -12,10 +12,11 @@
     <link rel="stylesheet" href="global.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
 
-    <script src="lib/codemirror.js"></script>
-    <link rel="stylesheet" href="lib/codemirror.css" />
-    <link rel="stylesheet" href="theme/material-darker.css" />
-    <script src="mode/javascript/javascript.js"></script>
+    <script src="codemirror/lib/codemirror.js"></script>
+    <link rel="stylesheet" href="codemirror/lib/codemirror.css" />
+    <link rel="stylesheet" href="codemirror/theme/material-darker.css" />
+    <script src="codemirror/mode/javascript.js"></script>
+    <script src="codemirror/mode/groovy.js"></script>
 
     <!-- Sapper generates a <style> tag containing critical CSS
 	     for the current page. CSS for the rest of the app is
