--- a/packages/frontend/src/template.html
+++ b/packages/frontend/src/template.html
@@ -37,7 +37,7 @@
   <body>
     <!-- The application will be rendered inside this element,
 	     because `src/client.js` references it -->
-    <div id="sapper">%sapper.html%</div>
+    %sapper.html%
 
     <!-- Sapper creates a <script> tag containing `src/client.js`
 	     and anything else it needs to hydrate the app and
